syntax = "proto3";
package pb;

message C2SPackage {
    uint64 UserID = 1;
    bytes Body    = 2;
}

message S2CPackage {
    uint64 UserID = 1;
    bytes Body    = 2;
}

message UserLoginReq {
    uint64 UserID = 1;
}

message CreatePlayerRPC {
    uint64 UserID = 1;
}

message CreatePlayerRPCRes {
    uint32 ServerID = 1;
}

message TestRPC {
}

message TestRPCRes {
    int32 v = 1;
}